// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create trip 1`] = `
Object {
  "fromDate": "2018-12-31T17:00:00.000Z",
  "infographics": Array [],
  "locations": Array [],
  "name": "name",
  "toDate": "2019-01-09T17:00:00.000Z",
  "tripId": "tripId",
}
`;

exports[`import trip location 1`] = `
Object {
  "fromDate": "2018-12-31T17:00:00.000Z",
  "infographics": Array [],
  "locations": Array [
    Object {
      "activity": Object {},
      "feeling": Object {},
      "fromTime": "2018-12-31T17:00:00.000Z",
      "images": CoreMongooseArray [],
      "location": Object {
        "address": "address",
        "lat": 1,
        "long": 1,
      },
      "locationId": "locationId01",
      "name": "name",
      "toTime": "2019-01-09T17:00:00.000Z",
    },
  ],
  "name": "name",
  "toDate": "2019-01-09T17:00:00.000Z",
  "tripId": "tripId",
}
`;

exports[`update trip name 1`] = `
Object {
  "fromDate": "2018-12-31T17:00:00.000Z",
  "infographics": Array [],
  "locations": Array [],
  "name": "name 2",
  "toDate": "2019-01-09T17:00:00.000Z",
  "tripId": "tripId",
}
`;

exports[`upload location image 1`] = `
Object {
  "externalStorageId": "guid01",
  "externalUrl": "",
  "imageId": "imageId01",
  "isFavorite": false,
  "thumbnailExternalUrl": "",
  "url": "url",
}
`;
